--- a/resume.html
+++ b/resume.html
@@ -412,6 +412,6 @@
 <script src="lib/resume/lib/jquery.fullPage.min.js"></script>
 <script src="lib/resume/lib/jquery.easing.1.3.js"></script>
 <script src="lib/resume/lib/jquery.isotope.js"></script>
-<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="lib/bootstrap/bootstrap.min.js"></script>
 <script src="lib/resume/js/handler.js"></script>
 <script src="lib/resume/js/resumeEnter.js"></script>
