--- a/homepage.html
+++ b/homepage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>周贤飞‘Blog</title>
+        <meta charset="UTF-8">
     <meta name="viewport" content="width=1300">
     <link rel="stylesheet" href='lib/homepage/css/style.css' type="text/css" />
 </head>
