--- a/resume.html
+++ b/resume.html
@@ -206,23 +206,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-6 col-md-3">
-                        <div class="thumbnail">
-                            <img src="lib/resume/images/page-4/lingyang.jpg" class='img-circle team-img' alt="">
-                            <div class="caption">
-                                <h3>杭州晓晨科技有限公司</h3>
-                                <p>Java开发&前端工程师</p>
-                                <p>Java开发和前端简单静态页面开发</p>
-                            </div>
-                        </div>
-                    </div>
+
                     <div class="col-xs-6 col-md-3">
                         <div class="thumbnail">
                             <img src="lib/resume/images/page-4/anjie.jpg" class='img-circle team-img' alt="">
                             <div class="caption">
-                                <h3>杭州亚信科技有限公司</h3>
+                                <h3>中国移动</h3>
                                 <p>前端工程师</p>
-                                <p>移动端、pc端页面开发，与后端借口交互</p>
+                                <p>移动端、pc端页面开发，与后端借口交互/java开发</p>
                             </div>
                         </div>
                     </div>
